limit auth routes and json patch route addition
